--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
 primaryColor="#5681d0"
 #backgroundColor="#CBE7E3"
-secondaryBackgroundColor="#1a1a3d"
-textColor="#DD83E0"
+secondaryBackgroundColor="#DCDCDC"
+textColor="#000000"
