--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
 primaryColor="#5681d0"
 #backgroundColor="#CBE7E3"
-secondaryBackgroundColor="#DCDCDC"
+secondaryBackgroundColor="#221545"
 textColor="#DD83E0"
